--- a/src/popup/modules/main/components/AssetFull/AssetFull.scss
+++ b/src/popup/modules/main/components/AssetFull/AssetFull.scss
@@ -16,7 +16,7 @@
         align-items: center;
         margin-bottom: 20px;
 
-        .asset-full__info-icon {
+        > .asset-icon {
             margin-right: 16px;
             min-width: 40px;
             width: 40px;
