--- a/src/popup/modules/nft/components/NftDetails/NftDetails.scss
+++ b/src/popup/modules/nft/components/NftDetails/NftDetails.scss
@@ -58,7 +58,7 @@
             margin-left: auto;
 
             > .nft-details__info-value-icon {
-                color: #a6aab2;
+                color: styles.$neutral-600;
             }
         }
     }
