--- a/src/popup/modules/main/components/Receive/Receive.scss
+++ b/src/popup/modules/main/components/Receive/Receive.scss
@@ -1,6 +1,6 @@
-.receive-screen {
-    padding: 20px;
+@use '../../../../styles';
 
+.receive-screen {
     .receive-screen__account_details {
         display: flex;
         align-items: center;
@@ -17,40 +17,57 @@
         }
     }
 
-    .receive-screen__form-title {
+    .receive-screen__title {
+        display: flex;
+        align-items: center;
+        gap: 8px;
         font-weight: bold;
-        margin-bottom: 28px;
+        margin-bottom: 16px;
+
+        .receive-screen__title-symbol {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+
+            > .asset-icon {
+                width: 20px;
+                height: 20px;
+            }
+        }
     }
 
     .receive-screen__qr-code {
-        background: #f8f9f9;
+        margin: 0 -16px;
+    }
 
+    .receive-screen__footer {
         display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
         align-items: center;
+        gap: 12px;
+        background-color: #fffaed;
+        padding: 16px;
+        margin-top: 0;
 
-        height: 120px;
-        margin-bottom: 40px;
-
-        .receive-screen__qr-code-code {
-            display: flex;
-            width: 80px;
-            height: 80px;
-            margin-left: 20px;
+        .receive-screen__footer-text {
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 16px;
+            letter-spacing: 0.2px;
+            color: #000;
         }
 
-        .receive-screen__qr-code-address {
+        .receive-screen__footer-btn {
+            @include styles.button-reset;
             display: flex;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 16px;
+            align-items: center;
+            justify-content: center;
+            padding: 8px 16px;
+            border: 1px solid #e6ac00;
+            font-weight: 700;
+            font-size: 14px;
             line-height: 20px;
-            letter-spacing: 0.25px;
-            color: #000;
-            padding: 20px;
-            word-break: break-all;
-            max-width: 70%;
+            letter-spacing: 0.6px;
+            color: #e6ac00;
         }
     }
 }
