--- a/src/popup/modules/network/components/NetworkForm/NetworkForm.scss
+++ b/src/popup/modules/network/components/NetworkForm/NetworkForm.scss
@@ -106,6 +106,11 @@
         line-height: 20px;
         letter-spacing: 0.1px;
 
+        &:disabled {
+            opacity: .6;
+            cursor: not-allowed;
+        }
+
         &._delete {
             color: styles.$error;
         }
