--- a/src/popup/modules/approvals/components/Approval/Approval.scss
+++ b/src/popup/modules/approvals/components/Approval/Approval.scss
@@ -57,6 +57,10 @@
         padding: 5px 10px;
     }
 
+    .approval__footer-error {
+        margin-bottom: 8px;
+    }
+
     &__spend-details {
         background: #f8f9f9;
         padding: 20px;
