--- a/src/popup/modules/account/style.scss
+++ b/src/popup/modules/account/style.scss
@@ -293,11 +293,23 @@
         }
 
         .accounts-management__type-list-item {
+            gap: 20px;
+            padding: 0 20px;
+            border: 1px solid #dde1e2;
             min-height: 66px;
             margin-bottom: 8px;
 
-            .accounts-management__type-list-item-name {
+            &._checked {
+                background-color: #f8f9f9;
+                border: 1px solid styles.$primary;
+            }
 
+            .accounts-management__type-list-item-name {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 20px;
+                letter-spacing: .25px;
+                color: #000;
             }
 
             .accounts-management__type-list-item-description {
