--- a/src/popup/modules/main/components/AccountSettings/AccountSettings.scss
+++ b/src/popup/modules/main/components/AccountSettings/AccountSettings.scss
@@ -45,34 +45,14 @@
     }
 
     .seeds-list {
-        .seeds-list__item {
-            border-top: 1px solid styles.$neutral-850;
-
-            &:first-child {
-                border-top: none;
-            }
-        }
-
-        .seeds-list__item-radio {
-            gap: 6px;
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 20px;
-            letter-spacing: 0.1px;
-            color: #000;
-            border: none;
-            padding: 14px 6px;
-            background-color: transparent;
-        }
-
         .seeds-list__item-mark {
             color: styles.$neutral-600;
-            margin-left: 8px;
+            margin-left: 4px;
+            text-transform: lowercase;
         }
 
         .radio-button__content {
             @include styles.ellipsis;
-            padding: 0;
         }
     }
 
@@ -82,17 +62,13 @@
         align-items: center;
         gap: 12px;
         width: 100%;
-        height: 56px;
+        height: 48px;
 
         &._logout {
             .account-settings__btn-icon,
             .account-settings__btn-text {
                 color: styles.$error;
             }
-        }
-
-        + .account-settings__btn {
-            border-top: 1px solid rgba(#000, .1);
         }
 
         .account-settings__btn-icon {
