--- a/src/popup/modules/shared/components/RadioButton/RadioButton.scss
+++ b/src/popup/modules/shared/components/RadioButton/RadioButton.scss
@@ -3,7 +3,7 @@
 
 @layer components {
     $md-radio-checked-color: styles.$primary;
-    $md-radio-border-color: styles.$primary;
+    $md-radio-border-color: #c6c9cf;
     $md-radio-size: 16px;
     $md-radio-checked-size: 8px;
     $md-radio-ripple-size: 15px;
@@ -26,25 +26,11 @@
         @include styles.button-reset;
         display: flex;
         align-items: center;
-        gap: 20px;
-        padding: 0 20px;
-        border: 1px solid #dde1e2;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 20px;
-        letter-spacing: .25px;
-        color: #000;
+        gap: 8px;
+        padding: 0 2px;
         cursor: pointer;
-        transition: border-color styles.$trans-fast;
-
-        &:hover:not(._checked):not(._disabled) {
-            border: 1px solid #abb4b8;
-        }
 
         &._checked {
-            background: #f8f9f9;
-            border: 1px solid $md-radio-checked-color;
-
             .radio-button__box {
                 border-color: $md-radio-checked-color;
                 animation: ripple 0.2s linear forwards;
@@ -56,7 +42,6 @@
         }
 
         &._disabled {
-            border-color: #dde1e2;
             cursor: not-allowed;
             opacity: 0.6;
 
@@ -93,6 +78,11 @@
 
         .radio-button__content {
             flex: 1 1 0;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 20px;
+            letter-spacing: .1px;
+            color: #000;
             padding: 8px 0;
         }
     }
