--- a/src/popup/modules/main/components/AccountSettings/AccountSettings.scss
+++ b/src/popup/modules/main/components/AccountSettings/AccountSettings.scss
@@ -45,6 +45,8 @@
     }
 
     .seeds-list {
+        margin-top: 4px;
+
         .seeds-list__item-mark {
             color: styles.$neutral-600;
             margin-left: 4px;
