--- a/src/popup/modules/main/components/MultisigTransaction/MultisigTransaction.scss
+++ b/src/popup/modules/main/components/MultisigTransaction/MultisigTransaction.scss
@@ -107,7 +107,7 @@
             }
 
             &._initiator {
-                background-color: #e6ac00;
+                background-color: styles.$warning;
             }
 
             &._unsigned {
