--- a/src/popup/styles/_colors.scss
+++ b/src/popup/styles/_colors.scss
@@ -2,7 +2,8 @@ $primary: #2b63f1;
 $primary-light: #ecf1fe;
 $grey: #96a1a7;
 $light-grey: #ebedee;
-$error: #cc0022;
+$error: #d83f5a;
+$warning: #e6ac00;
 $success: #00ac47;
 $blue-970: #f9faff;
 $neutral-400: #8b909a;
