--- a/src/popup/styles/main.scss
+++ b/src/popup/styles/main.scss
@@ -61,9 +61,9 @@ body {
 
     h2 {
         font-style: normal;
-        font-weight: bold;
+        font-weight: 500;
         font-size: 24px;
-        line-height: 32px;
+        line-height: 28px;
         color: #000;
     }
 
