--- a/src/popup/modules/main/components/AccountDetails/AccountDetails.scss
+++ b/src/popup/modules/main/components/AccountDetails/AccountDetails.scss
@@ -49,7 +49,7 @@
                     width: 16px;
                     height: 16px;
                     border-radius: 8px;
-                    background-color: #E6AC00;
+                    background-color: styles.$warning;
                     border: 2px solid #060C32;
                     z-index: 1;
                 }
