--- a/src/popup/modules/onboarding/styles/main.scss
+++ b/src/popup/modules/onboarding/styles/main.scss
@@ -82,7 +82,7 @@
     width: 48px;
     height: 49px;
     border-radius: 50%;
-    background-color: #E6AC00;
+    background-color: styles.$warning;
     display: flex;
     align-items: center;
     justify-content: center;
