--- a/src/popup/modules/shared/components/Hint/Hint.scss
+++ b/src/popup/modules/shared/components/Hint/Hint.scss
@@ -2,9 +2,29 @@
 
 @layer components {
     .hint {
+        display: block;
+        width: 100%;
+        font-weight: 500;
         font-size: 12px;
-        line-height: 18px;
-        color: styles.$neutral-400;
+        line-height: 16px;
+        letter-spacing: 0.2px;
+        color: styles.$neutral-600;
         margin-top: 4px;
+
+        a {
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 16px;
+            letter-spacing: 0.2px;
+            color: styles.$primary;
+        }
+
+        &:first-child {
+            margin-top: 0;
+        }
+
+        & + & {
+            margin-top: 0;
+        }
     }
 }
