feat: add password visibility btn

--- a/src/popup/modules/account/components/ChangePassword/ChangePassword.scss
+++ b/src/popup/modules/account/components/ChangePassword/ChangePassword.scss
@@ -2,6 +2,18 @@
 
 .change-password {
 
+    .change-password__visibility-btn {
+        @include styles.button-reset;
+        display: block;
+
+        > svg {
+            display: block;
+            width: 20px;
+            height: 20px;
+            color: styles.$neutral-600;
+        }
+    }
+
     .change-password__new-pwd:focus-within {
         .change-password__meter {
             opacity: 1;
